prevent page scrolling behind open modal
closes #3

--- a/src/scss/utilities/_helpers.scss
+++ b/src/scss/utilities/_helpers.scss
@@ -3,6 +3,8 @@
 .full-padding { padding: ($gutter * 3) 0; }
 .side-padding { padding: 0 $gutter; }
 
+.no-scroll { overflow: hidden; }
+
 .top-margin       { margin-top:    $gutter; }
 .top-margin-lg    { margin-top:    $gutter * 2; }
 
